# django-shop-course

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
cms/: admin.py  models.py
crm/: admin.py  models.py  views.py
price/: admin.py  models.py
shop/: settings.py  urls.py
static/: external.css
telebot/: models.py  sendmessage.py
templates/: base.html  carusel.html  index.html  price.html  thanks.html
