[tool.poetry]
name = "django-shop-course"
version = "0.1.0"
description = ""
authors = ["dexatoro <daniyazgit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
